2013-05-31  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/dmatrix_mesh.m: (0.1.0)

	- DMATRIX_MESH Sparse distance and shortest-path distance matrices
	between the nodes of a mesh.

	* Delete matlab/PointsToolbox/dmatrix_complete.m:

	- One liner function that simply adds an unnecessary layer to dijkstra().

	* matlab/PointsToolbox/dmatrix.m: (0.3.1)

	- Update deprecated syntax to check input and output arguments.

2013-05-30  Ramon Casero  <rcasero@gmail.com>

	* matlab/VectorWrapper.h: (0.5.1)

	- Fix bug. Make the ValueType template element of the partial
	specialisation for itk::Size less specific. Otherwise, the
	BoxFilterType::RadiusValueType from the Median filter in
	ItkImFilter.cpp is not recognised by the partial specialisation.

	* matlab/ItkToolbox/ItkImFilter.cpp: (1.4.1)

	- Fix bug. Wrong variable name for default maximum error in Canny edge detector.

	- Fix bug. I had forgotten to uncomment the rest of the filters.

	* matlab/ItkToolbox/ItkImFilter.cpp: (1.4.0)
	* matlab/ItkToolbox/itk_imfilter.m: (0.7.3)
	* matlab/test/test_itk_imfilter.m: (0.4.1)

	- Add CannyEdgeDetectionImageFilter.

	* Add some image data files for tests:

	test/data/008-mri-downsampled-4.mha
	test/data/008-lvseg-thickslice-z.mha
	test/data/008-lvhull-points.mha
	test/data/008-lvhull-downsampled-4.mha
	test/data/008-rvhull-points.mha
	test/data/008-rvhull-downsampled-4.mha

	* matlab/MatlabImportFilter.hxx: (0.6.1)
	* matlab/MatlabImportFilter.h: (0.6.1)

	- Fix bug. The VectorSize template has to be an "unsigned int",
	because that's the type of the Dimension variable in ITK vectors,
	e.g. itk::Size. Otherwise, when we were passing VectorSize as an
	"unsigned int", but the template definition was mwSize = "long
	unsigned int", it was not recognised as the same template element,
	and partial specialisation failed.

	* matlab/VectorWrapper.h: (0.5.0)
	* matlab/VectorWrapper.hxx: (0.4.0)

	- Taking a bit of a partial step back from the last commit, we do